--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "inertiajs/inertia-laravel": "^1.3",
         "laravel/fortify": "^1.24",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
