--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@types/node": "^22.10.0",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
-        "vite": "^5.0"
+        "typescript": "^5.7.2",
+        "vite": "^5.0",
+        "vite-tsconfig-paths": "^5.1.3"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^1.2.0",
+        "react-dom": "^18.3.1"
     }
 }
