--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@inertiajs/react": "^1.2.0",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "uuid": "^11.0.3"
     }
 }
