--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "tailwindcss": "^3.4.13",
         "typescript": "^5.7.2",
         "vite": "^5.0",
-        "vite-tsconfig-paths": "^5.1.3"
+        "vite-tsconfig-paths": "^5.1.3",
+        "vitest": "^2.1.8"
     },
     "dependencies": {
         "@inertiajs/react": "^1.2.0",
